[package]
name = "cargo-atcoder"
version = "0.4.1"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Cargo subcommand for AtCoder"
repository = "https://github.com/tanakh/cargo-atcoder"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "procon"]

[features]
watch = ["notify"]

[dependencies]
anyhow = "1.0.42"
bytesize = "1.0.1"
cargo_metadata = "0.18.1"
chrono = "0.4.19"
console = "0.15.8"
data-encoding = "2.3.2"
dialoguer = "0.11.0"
dirs = "5.0.1"
futures = "0.3.16"
indicatif = "0.17.8"
itertools = "0.13.0"
once_cell = "1.8.0"
notify = { version = "6.1.1", optional = true }
regex = "1.5.4"
reqwest = { version = "0.12.4", features = ["cookies"] }
scraper = "0.19.0"
serde = { version = "1.0.127", features = ["derive"] }
sha2 = "0.10.8"
structopt = "0.3.22"
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.13"
toml_edit = "0.22.13"
unicode-width = "0.1.8"
url = "2.2.2"
which = "6.0.1"

[dev-dependencies]
assert_cmd = "2.0.14"
maplit = "1.0.2"
predicates = "3.1.0"
pretty_assertions = "1.4.0"
tempdir = "0.3.7"
